--- a/Lunia/package.json
+++ b/Lunia/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
